# ironrace-memory

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md
.cargo/: audit.toml
.claude-plugin/: .mcp.json  README.md  plugin.json
.claude-plugin/commands/: collab.md
.claude-plugin/hooks/: hooks.json  ironmem-hook.sh
.codex-plugin/: README.md  hooks.json  plugin.json
.codex-plugin/hooks/: ironmem-hook.sh
.codex-plugin/prompts/: collab-batch-impl.md  collab.md
.codex-plugin/skills/executing-plans/: SKILL.md
.codex-plugin/skills/finishing-a-development-branch/: SKILL.md
.codex-plugin/skills/requesting-code-review/: SKILL.md  code-reviewer.md
.codex-plugin/skills/subagent-driven-development/: SKILL.md  code-quality-reviewer-prompt.md  implementer-prompt.md  spec-reviewer-prompt.md
.codex-plugin/skills/test-driven-development/: SKILL.md
.codex-plugin/skills/using-git-worktrees/: SKILL.md
.codex-plugin/skills/using-superpowers/: SKILL.md
.codex-plugin/skills/writing-plans/: SKILL.md  plan-document-reviewer-prompt.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
benchmarks/provbench/: .gitignore  SPEC.md
benchmarks/provbench/baseline/: Cargo.toml  README.md  build.rs
benchmarks/provbench/baseline/fixtures/: sample_corpus.jsonl  sample_corpus_with_exclusions.jsonl  sample_facts.jsonl
benchmarks/provbench/baseline/src/: budget.rs  client.rs  constants.rs  diffs.rs  facts.rs  lib.rs  main.rs  manifest.rs  metrics.rs  prompt.rs  report.rs  runner.rs  sample.rs
benchmarks/provbench/baseline/tests/: budget_preflight.rs  budget_runtime.rs  caching_layout.rs  client_retries.rs  end_to_end_fixture.rs  metric_math.rs  parse_failure_skip.rs  prompt_assembly.rs  prompt_frozen.rs  resume_safety.rs  runner_artifact_validation.rs  sample_determinism.rs  sample_exclusions.rs
benchmarks/provbench/labeler/: Cargo.toml  README.md  build.rs
benchmarks/provbench/labeler/src/: label.rs  lang.rs  lib.rs  main.rs  output.rs  replay.rs  repo.rs  spotcheck.rs  tooling.rs
benchmarks/provbench/labeler/src/ast/: mod.rs  python.rs  spans.rs
benchmarks/provbench/labeler/src/diff/: mod.rs
benchmarks/provbench/labeler/src/facts/: doc_claim.rs  field.rs  function_signature.rs  mod.rs  symbol_existence.rs  test_assertion.rs
benchmarks/provbench/labeler/src/facts/python/: doc_claim.rs  field.rs  function_signature.rs  mod.rs  symbol_existence.rs  test_assertion.rs
benchmarks/provbench/labeler/src/replay/: commit_index.rs  match_post.rs  mod.rs
benchmarks/provbench/labeler/src/resolve/: mod.rs  python.rs  rust_analyzer.rs
benchmarks/provbench/labeler/tests/: ast.rs  cli_spotcheck.rs  determinism.rs  determinism_flask.rs  determinism_python.rs  determinism_serde.rs  diff.rs  emit_diffs_roundtrip.rs  emit_facts_roundtrip.rs  label.rs  lang.rs  output.rs  path_canon.rs  python_ast.rs  python_facts.rs  python_resolve.rs  replay.rs  replay_hardening.rs  replay_ra.rs  repo.rs  rust_analyzer.rs  smoke.rs  spotcheck.rs  tooling.rs
benchmarks/provbench/labeler/tests/common/: mod.rs
benchmarks/provbench/labeler/tests/data/python/repo/src/: example.py
benchmarks/provbench/labeler/tests/data/python/repo/tests/: test_example.py
benchmarks/provbench/phase1/: Cargo.toml
benchmarks/provbench/phase1/src/: baseline_run.rs  diffs.rs  facts.rs  lib.rs  main.rs  parse.rs  repo.rs  runner.rs  similarity.rs  storage.rs
benchmarks/provbench/phase1/src/rules/: mod.rs  r0_diff_excluded.rs  r1_source_file_missing.rs  r2_blob_identical.rs  r3_symbol_missing.rs  r4_span_hash_changed.rs  r5_whitespace_or_comment_only.rs  r6_doc_claim.rs  r7_rename_candidate.rs  r8_ambiguous.rs  r9_fallback.rs
benchmarks/provbench/phase1/tests/: determinism.rs  end_to_end_canary.rs  end_to_end_heldout_serde.rs  load_roundtrip.rs  rules_unit.rs
benchmarks/provbench/results/: python-labeler-2026-05-15-spotcheck-findings.md  python-labeler-2026-05-15-spotcheck.csv  python-labeler-2026-05-15-spotcheck.csv.meta.json  ripgrep-pilot-2026-05-15-v1.2a-findings.md  serde-heldout-2026-05-15-findings.md
benchmarks/provbench/scoring/: Cargo.toml
benchmarks/provbench/scoring/src/: compare.rs  constants.rs  lib.rs  manifest.rs  metrics.rs  predictions.rs  report.rs
benchmarks/provbench/scoring/tests/: byte_stable_canary.rs  predictionrow_schema_compat.rs
benchmarks/provbench/spotcheck/: 2026-05-12-findings.md  2026-05-12-post-pass3-findings.md  2026-05-13-post-pass4-findings.md  2026-05-13-post-pass5-findings.md  sample-2fc250a-autofilter.csv  sample-2fc250a.csv  sample-c2d3b7b-autofilter.csv  (+8 more)
crates/ironmem/: Cargo.toml  build.rs
crates/ironrace-core/: Cargo.toml
crates/ironrace-core/src/: lib.rs  vector.rs
crates/ironrace-embed/: Cargo.toml
crates/ironrace-embed/src/: embedder.rs  lib.rs
crates/ironrace-memory/: Cargo.toml
crates/ironrace-memory/migrations/: 001_init.sql  003_collab.sql  004_collab_planning_v1.sql
crates/ironrace-memory/src/: bootstrap.rs  config.rs  diary.rs  error.rs  hook.rs  lib.rs  main.rs  reembed.rs  sanitize.rs
crates/ironrace-memory/src/collab/: mod.rs  queue.rs
crates/ironrace-memory/src/db/: collab.rs  drawers.rs  knowledge_graph.rs  mod.rs  schema.rs  wal.rs
crates/ironrace-memory/src/ingest/: mod.rs
crates/ironrace-memory/src/mcp/: app.rs  mod.rs  protocol.rs  server.rs  tools.rs
crates/ironrace-memory/src/migrate/: chromadb.rs  mod.rs
crates/ironrace-memory/src/search/: graph.rs  mod.rs  pipeline.rs  rerank.rs  sanitizer.rs  tunables.rs
crates/ironrace-memory/tests/: cli_smoke.rs  mcp_protocol.rs  mining.rs  plugin_metadata.rs  scenarios.rs
crates/ironrace-pref-extract/: Cargo.toml
crates/ironrace-rerank/: Cargo.toml
docs/: CODEX.md  COLLAB.md  RENAME_IRONMEM_PLAN.md
migrations/: 001_init.sql  002_fts.sql
scripts/: benchmark_convomem.py  benchmark_locomo.py  benchmark_longmemeval.py  benchmark_membench.py  benchmark_recall.py  benchmark_vs_mempalace.py  check-versions.sh  check_versions.sh  e2_sweep.sh  install-ironmem.sh  mcp_smoke_test.py
(+121 files in other folders)
