[workspace]
members = [
    "crates/ironrace-core",
    "crates/ironrace-embed",
    "crates/ironrace-rerank",
    "crates/ironrace-pref-extract",
    "crates/ironmem",
]
exclude = ["benchmarks/provbench/labeler", "benchmarks/provbench/baseline"]
resolver = "2"

[workspace.package]
rust-version = "1.91"
