[package]
name = "ironrace-core"
version = "0.1.0"
edition = "2021"
description = "Shared HNSW vector index for ironrace"
license = "Apache-2.0"
authors = ["Jeffrey Crum <jeffrey.crum81@gmail.com>"]
repository = "https://github.com/ironrace/ironrace-memory"
homepage = "https://github.com/ironrace/ironrace-memory"
keywords = ["vector-search", "hnsw", "memory", "mcp", "embeddings"]

[dependencies]
hnsw_rs = "=0.3.4"
rayon = "1.10"
