[package]
name = "ironrace-core"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
description = "Shared HNSW vector index for ironrace"
license = "Apache-2.0"
authors = ["Jeffrey Crum <jeffrey.crum81@gmail.com>"]
repository = "https://github.com/ironrace/ironmem"
homepage = "https://github.com/ironrace/ironmem"
keywords = ["vector-search", "hnsw", "memory", "mcp", "embeddings"]
categories = ["algorithms", "data-structures"]
readme = "../../README.md"

[dependencies]
hnsw_rs = "=0.3.4"
rayon = "1.10"
