[package]
name = "ironrace-memory"
version = "0.1.0"
edition = "2021"
description = "AI memory MCP server — semantic search + knowledge graph in a single binary"
license = "Apache-2.0"
authors = ["Jeffrey Crum <jeffrey.crum81@gmail.com>"]
repository = "https://github.com/jcagentszero/ironrace-memory"
homepage = "https://github.com/jcagentszero/ironrace-memory"
keywords = ["memory", "mcp", "semantic-search", "knowledge-graph", "ai"]

[lib]
name = "ironrace_memory"
path = "src/lib.rs"

[[bin]]
name = "ironmem"
path = "src/main.rs"

[dependencies]
ironrace-core = { path = "../ironrace-core" }
ironrace-embed = { path = "../ironrace-embed" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
libc = "0.2"
ignore = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
