[package]
name = "provbench-baseline"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
description = "Phase 0c LLM-as-invalidator baseline for ProvBench-CodeContext (frozen contract: benchmarks/provbench/SPEC.md)"
license = "Apache-2.0"
publish = false

[[bin]]
name = "provbench-baseline"
path = "src/main.rs"

[lib]
name = "provbench_baseline"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
rand_chacha = "0.3"
rand = "0.8"
provbench-scoring = { path = "../scoring" }
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "io-util", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures = "0.3"
tempfile = "3"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
