[package]
name = "provbench-labeler"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
description = "Phase 0b mechanical labeler for ProvBench-CodeContext (frozen contract: benchmarks/provbench/SPEC.md)"
license = "Apache-2.0"
publish = false

[[bin]]
name = "provbench-labeler"
path = "src/main.rs"

[lib]
name = "provbench_labeler"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gix = { version = "0.66", default-features = false, features = ["blocking-network-client", "max-performance-safe"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
similar = "2"
pulldown-cmark = { version = "0.12", default-features = false }
rand = "0.8"
rand_chacha = "0.3"
which = "6"
csv = "1"

[dev-dependencies]
tempfile = "3"
