[package]
name = "provbench-scoring"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
description = "Shared scoring math for ProvBench (LLM baseline + Phase 1 rules)"
license = "Apache-2.0"
publish = false

[[bin]]
name = "provbench-score"
path = "src/bin/provbench-score.rs"

[lib]
name = "provbench_scoring"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statrs = "0.17"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
